refactor(agents): extract task-specific workflows from AGENTS.md into skills
Move the "adding a new binding" checklist (repo scaffolding, module-level
implementation, schema wiring), the JMH benchmark procedure, and the
"adding a new engine concept" checklist out of AGENTS.md into
.claude/skills/{add-binding,run-benchmark,add-engine-concept}, since these
are rare task-specific workflows rather than guidance needed in every
session. Also drop the "Key dependencies" table (derivable from pom.xml)
and carve out a .gitignore exception so checked-in skills aren't excluded
by the blanket .claude/ ignore rule.